--- a/sections/b.main/5.evaluation.tex
+++ b/sections/b.main/5.evaluation.tex
@@ -7,8 +7,8 @@
 
 \section{Effectiveness of Caching in Cover Computation}
 
-\input{sections/b.main/5.evaluation/1.quality.tex}
+\input{sections/b.main/5.evaluation/2.cache.tex}
 
 \section{Evaluating Required Execution Time}
 
-\input{sections/b.main/5.evaluation/1.quality.tex}
+\input{sections/b.main/5.evaluation/3.perf.tex}
