--- a/sections/c.back/a.sroiq/2.sroiq-sem.tex
+++ b/sections/c.back/a.sroiq/2.sroiq-sem.tex
@@ -2,41 +2,41 @@
 
 The semantics of $\SROIQ$, similar to other description logics, are defined in a model-theoretic way. Therefore, a central notion in that of the interpretations. And \emph{interpretation} $\Imc = \langle \Delta^\Imc, \cdot^\Imc \rangle$ consists of a set $\Delta^\Imc$ called the \emph{domain} of $\Imc$, and an \emph{interpretation function} $\cdot^\Imc$. The interpretation function maps the vocabulary elements as follows:
 \begin{itemize}
-    \item for each individual name $a \in \mathrm{N}_I$ to an element $a^\Imc \in \Delta^\Imc$ in the domain,
-    \item for each concept name $C \in \mathrm{N}_C$ to a subset $C^\Imc \subseteq \Delta^\Imc$ of the domain, and
-    \item for each role name $r \in \mathrm{N}_R$ to a relation $r^\Imc \subseteq \Delta^\Imc \times \Delta^\Imc$ over the domain.
+  \item for each individual name $a \in \mathrm{N}_I$ to an element $a^\Imc \in \Delta^\Imc$ in the domain,
+  \item for each concept name $C \in \mathrm{N}_C$ to a subset $C^\Imc \subseteq \Delta^\Imc$ of the domain, and
+  \item for each role name $r \in \mathrm{N}_R$ to a relation $r^\Imc \subseteq \Delta^\Imc \times \Delta^\Imc$ over the domain.
 \end{itemize}
 An interpretation maps the universal role $U$ to $U^\Imc = \Delta^\Imc \times \Delta^\Imc$. We extend the interpretation function to operate over inverse roles such that  $\left(r^-\right)^\Imc$ contains exactly those elements $\langle \delta_1, \delta_2 \rangle$ for which $\langle \delta_2, \delta_1 \rangle$ is contained in $r^\Imc$, that is  $\left(r^-\right)^\Imc = \{ \langle \delta_1, \delta_2 \rangle \mid \langle \delta_2, \delta_1 \rangle \in r^\Imc \}$. Further, we define the extension of the interpretation function to complex concepts inductively as follows:
 \begin{itemize}
-    \item The top concept is true for every individual in the domain, therefore $\top^\Imc = \Delta^\Imc$.
-    \item The bottom concept is true for no individual, hence $\bot^\Imc = \empty$ where $\empty$ represents the empty set.
-    \item Nominal concepts contain exactly the specified individuals, that is $\{ 1 \}^\Imc = \{ i^\Imc \}$.
-    \item $\lnot C$ yields the complement of the extension of $C$, thus $(\lnot C)^\Imc = \Delta^\Imc \setminus C^\Imc$.
-    \item $C \sqcup D$ denotes all individuals that are in either the extension of $C$ or in that of $D$, hence $(C \sqcup D)^\Imc = C^\Imc \cup D^\Imc$.
-    \item $C \sqcap D$ on the other hand, denotes all elements of the domain that are in the extension of both $C$ and $D$, which can be expressed as $(C \sqcap D)^\Imc = C^\Imc \cap D^\Imc$.
-    \item $\exists R.C$ holds for all individuals that are connected by some element in the extension of $R$ to an individual in the extension of $C$, formally $(\exists R.C)^\Imc = \{ \delta_1 \in \Delta^\Imc \mid \exists \delta_2 \in \Delta^\Imc \, . \; \langle \delta_1, \delta_2 \rangle \in R^\Imc \, \land \, \delta_2 \in C^\Imc  \}$.
-    \item $\forall R.C$ refers to all domain elements for which all elements in the extension of $R$ connect them to elements in the extension of $C$, that is $(\forall R.C)^\Imc = \{ \delta_1 \in \Delta^\Imc \mid \forall \delta_2 \in \Delta^\Imc \, . \; \langle \delta_1, \delta_2 \rangle \in R^\Imc \to \delta_2 \in C^\Imc \}$.
-    \item $\exists R.\self$ indicates all individuals that the extension of $R$ connects to themselves, hence we let $(\exists R.\self)^\Imc = \{ \delta \in \Delta^\Imc \mid \langle \delta, \delta \rangle \in R^\Imc\}$.
-    \item $\less n R.C$ represents those individuals that have at most $n$ other individuals they are $R$-related to in the concept extension of $C$, that is  $(\less n R.C)^\Imc = \{ \delta_1 \in \Delta^\Imc \mid \left| \{ \delta_2 \in \Delta^\Imc \mid \langle \delta_1, \delta_2 \rangle \in R^\Imc \, \land \; \delta_2 \in C^\Imc \} \right| \less n \}$ where $|S|$ denotes the cardinality of a set $S$.
-    \item $\more n R.C$ corollary to the case above indicates those domain elements that have at least $N$ such $R$-related elements, \\$(\more n R.C)^\Imc = \{ \delta_1 \in \Delta^\Imc \mid \left| \{ \delta_2 \in \Delta^\Imc \mid \langle \delta_1, \delta_2 \rangle \in R^\Imc \, \land \; \delta_2 \in C^\Imc \} \right| \more n \}$.
+  \item The top concept is true for every individual in the domain, therefore $\top^\Imc = \Delta^\Imc$.
+  \item The bottom concept is true for no individual, hence $\bot^\Imc = \empty$ where $\empty$ represents the empty set.
+  \item Nominal concepts contain exactly the specified individuals, that is $\{ 1 \}^\Imc = \{ i^\Imc \}$.
+  \item $\lnot C$ yields the complement of the extension of $C$, thus $(\lnot C)^\Imc = \Delta^\Imc \setminus C^\Imc$.
+  \item $C \sqcup D$ denotes all individuals that are in either the extension of $C$ or in that of $D$, hence $(C \sqcup D)^\Imc = C^\Imc \cup D^\Imc$.
+  \item $C \sqcap D$ on the other hand, denotes all elements of the domain that are in the extension of both $C$ and $D$, which can be expressed as $(C \sqcap D)^\Imc = C^\Imc \cap D^\Imc$.
+  \item $\exists R.C$ holds for all individuals that are connected by some element in the extension of $R$ to an individual in the extension of $C$, formally $(\exists R.C)^\Imc = \{ \delta_1 \in \Delta^\Imc \mid \exists \delta_2 \in \Delta^\Imc \, . \; \langle \delta_1, \delta_2 \rangle \in R^\Imc \, \land \, \delta_2 \in C^\Imc  \}$.
+  \item $\forall R.C$ refers to all domain elements for which all elements in the extension of $R$ connect them to elements in the extension of $C$, that is $(\forall R.C)^\Imc = \{ \delta_1 \in \Delta^\Imc \mid \forall \delta_2 \in \Delta^\Imc \, . \; \langle \delta_1, \delta_2 \rangle \in R^\Imc \to \delta_2 \in C^\Imc \}$.
+  \item $\exists R.\self$ indicates all individuals that the extension of $R$ connects to themselves, hence we let $(\exists R.\self)^\Imc = \{ \delta \in \Delta^\Imc \mid \langle \delta, \delta \rangle \in R^\Imc\}$.
+  \item $\less n R.C$ represents those individuals that have at most $n$ other individuals they are $R$-related to in the concept extension of $C$, that is  $(\less n R.C)^\Imc = \{ \delta_1 \in \Delta^\Imc \mid \left| \{ \delta_2 \in \Delta^\Imc \mid \langle \delta_1, \delta_2 \rangle \in R^\Imc \, \land \; \delta_2 \in C^\Imc \} \right| \less n \}$ where $|S|$ denotes the cardinality of a set $S$.
+  \item $\more n R.C$ corollary to the case above indicates those domain elements that have at least $N$ such $R$-related elements, \\$(\more n R.C)^\Imc = \{ \delta_1 \in \Delta^\Imc \mid \left| \{ \delta_2 \in \Delta^\Imc \mid \langle \delta_1, \delta_2 \rangle \in R^\Imc \, \land \; \delta_2 \in C^\Imc \} \right| \more n \}$.
 \end{itemize}
 
 \begin{example}
-% TODO
+  % TODO
 \end{example}
 
 \subsection{Satisfaction of Axioms} \label{satisfaction-of-axioms}
 
 The purpose of the (extended) interpretation function is mainly to determine satisfaction of axioms. We define in the following when an axiom $\alpha$ is true, or holds, in a specific interpretation $\Imc$. If this is the case, the interpretation $\Imc$ satisfies $\alpha$, written $\Imc \models \alpha$. If an interpretation $\Imc$ satisfies an axiom $\alpha$, we also say that $\Imc$ is a model of $\alpha$.
 \begin{itemize}
-    \item A role inclusion axiom $S_1 \circ \cdots \circ S_n \sqsubseteq R$ holds in $\Imc$ if and only if for each sequence $\delta_1, \dots, \delta_{n + 1} \in \Delta^\Imc$ for which $\langle \delta_i , \delta_{i + 1} \rangle \in S_i^\Imc$ for all $i = 1, \cdots, n$, also $\langle \delta_1 , \delta_n \rangle \in R^\mathcal{i}$ is satisfied. Equivalently, we can write $\Imc \models S_1 \circ \cdots \circ S_n \sqsubseteq R \iff S_1^\Imc \circ \cdots \circ S_n^\Imc \subseteq R^\Imc$ where $\circ$ denotes the composition of the relations.
-    \item A role disjointness axiom $\disjoint(S, R)$ hold iff the extensions of $R$ and $S$ are disjoint, formally $\Imc \models \disjoint(S, R) \iff S^\mathrm{I} \cap R^\mathrm{I} = \empty$.
-    \item A general concept inclusion axiom $C \sqsubseteq D$ is true iff the extension of $C$ is fully contained in the extension of $D$, hence $\Imc \models C \sqsubseteq D \iff C^\Imc \subseteq D^\Imc$.
-    \item A concept assertion $C(a)$ holds iff the individual that $a$ is mapped to by $\cdot^\Imc$ is in the concept extension of $C$, therefore $\Imc \models C (a) \iff a^\Imc \in C^\Imc$.
-    \item A role assertion $R(a, b)$ holds iff the individuals denoted by the name $a$ and $b$ are connected in the extension of $R$, thus $\Imc \models R(a, b) \iff \langle a^\Imc, b^\Imc \rangle \in R^\Imc$.
-    \item A negative role assertion $\lnot R(a, b)$ is true exactly than when the corresponding role assertion $R(a, b)$ is false. Equivalently, $\Imc \models \lnot R(a, b) \iff \langle a^\Imc, b^\Imc \rangle \not\in R^\Imc$.
-    \item An equality assertion $a = b$ holds iff the individuals identified by $a$ and $b$ are the same element of the domain, formally written $\Imc \models a = b \iff a^\Imc = b^\Imc$.
-    \item Dual to the above, $a \not = b$ holds iff the names $a$ and $b$ denote different elements, accordingly $\Imc \models a \not= b \iff a^\Imc \not= b^\Imc$.
+  \item A role inclusion axiom $S_1 \circ \cdots \circ S_n \sqsubseteq R$ holds in $\Imc$ if and only if for each sequence $\delta_1, \dots, \delta_{n + 1} \in \Delta^\Imc$ for which $\langle \delta_i , \delta_{i + 1} \rangle \in S_i^\Imc$ for all $i = 1, \cdots, n$, also $\langle \delta_1 , \delta_n \rangle \in R^\mathcal{i}$ is satisfied. Equivalently, we can write $\Imc \models S_1 \circ \cdots \circ S_n \sqsubseteq R \iff S_1^\Imc \circ \cdots \circ S_n^\Imc \subseteq R^\Imc$ where $\circ$ denotes the composition of the relations.
+  \item A role disjointness axiom $\disjoint(S, R)$ hold iff the extensions of $R$ and $S$ are disjoint, formally $\Imc \models \disjoint(S, R) \iff S^\mathrm{I} \cap R^\mathrm{I} = \empty$.
+  \item A general concept inclusion axiom $C \sqsubseteq D$ is true iff the extension of $C$ is fully contained in the extension of $D$, hence $\Imc \models C \sqsubseteq D \iff C^\Imc \subseteq D^\Imc$.
+  \item A concept assertion $C(a)$ holds iff the individual that $a$ is mapped to by $\cdot^\Imc$ is in the concept extension of $C$, therefore $\Imc \models C (a) \iff a^\Imc \in C^\Imc$.
+  \item A role assertion $R(a, b)$ holds iff the individuals denoted by the name $a$ and $b$ are connected in the extension of $R$, thus $\Imc \models R(a, b) \iff \langle a^\Imc, b^\Imc \rangle \in R^\Imc$.
+  \item A negative role assertion $\lnot R(a, b)$ is true exactly than when the corresponding role assertion $R(a, b)$ is false. Equivalently, $\Imc \models \lnot R(a, b) \iff \langle a^\Imc, b^\Imc \rangle \not\in R^\Imc$.
+  \item An equality assertion $a = b$ holds iff the individuals identified by $a$ and $b$ are the same element of the domain, formally written $\Imc \models a = b \iff a^\Imc = b^\Imc$.
+  \item Dual to the above, $a \not = b$ holds iff the names $a$ and $b$ denote different elements, accordingly $\Imc \models a \not= b \iff a^\Imc \not= b^\Imc$.
 \end{itemize}
 We say a set of axioms holds in an interpretation $\Imc$ iff every axiom of the set hold in $\Imc$. Accordingly, $\Imc$ satisfies a ontology $\Omc$, written $\Imc \models \Omc$, iff $\Imc$ satisfies every axiom $\alpha \in \Omc$ of the ontology, i.e., $\Imc \models \Omc \iff \forall \alpha \in \Omc \, . \; \Imc \models \alpha$. If $\Imc$ satisfies $\Omc$, we say $\Imc$ is a model of $\Omc$.
 
@@ -53,23 +53,23 @@ A knowledge $\Omc$ base is satisfiable iff there exists a model $\Imc \models \O
 An axiom $\alpha$ is entailed by $\Omc$ if every model $\Imc \models \Omc$ of the ontology also satisfies the axiom $\Imc \models \alpha$. We also write this as $\Omc \models \alpha$ and say that $\alpha$ is a consequence of $\Omc$. Deciding axiom entailment is an important task in order to derive new information from the collected knowledge. If $\alpha$ is entailed by the empty ontology, $\alpha$ is said to be a \emph{tautology}. Further, the \emph{set of consequences} of $\Omc$ if the set of all axioms which are entailed by $\Omc$, we write $\mathrm{Con}(\Omc) = \{ \alpha \mid \Omc \models \alpha \}.$ It is clear that the set of consequences will always be infinite, since there is an infinite number of tautologies.
 
 The problem of axiom entailment can be reduced to determining for the satisfiability of a modified ontology. This is achieved by using an axiom $\beta$ that imposes the opposite restriction to $\alpha$, to be more precise, for all interpretations $\Imc \models \alpha \iff \Imc \not\models \beta$. If $\alpha$ is entailed by $\Omc$, it must hold in every model of $\Omc$, hence $\beta$ must not hold in any model. It follows that the extended ontology $\Omc \cup \{ \, \beta \, \}$ has no new model, and is therefore unsatisfiable. We can consequently solve the axiom entailment problem by testing for satisfiability of a modified ontology, if we can find such an opposing axiom for $\alpha$. For some cases in $\SROIQ$ finding such an opposite is obvious, for others the desired behaviour must be emulated with a set of axioms. \Cref{tab:entailment-reduction} shows the correspondence for every type of $\SROIQ$ axiom.
-\begin{table}
-\begin{center}
-\begin{tabular}{l|l}
-    $\alpha$ & $B$ \\
-    \hline
-    $S_1 \circ \cdots \circ S_n \sqsubseteq R$ & $S_1(a_1, a_2)$, $\dots$, $S_n(a_n, a_{n + 1})$, and $\lnot R(a_1, a_{n + 1})$ \\
-    $\disjoint(S, R)$ & $S(a, b)$ and $R(a, b)$ \\
-    $C \sqsubseteq D$ & $(C \sqcap \lnot D)(a)$ \\
-    $C(a)$ & $\lnot C(a)$ \\
-    $R(a, b)$ & $\lnot R(a, b)$ \\
-    $\lnot R(a, b)$ & $R(a, b)$ \\
-    $a = b$ & $a \not= b$ \\
-    $a \not= b$ & $a = b$ \\
-\end{tabular}
-\end{center}
-\label{tab:entailment-reduction}
-\caption[Axioms substitution for reducing entailment to satisfiability]{The axioms in $B$ together have the “opposite” meaning of those in $\alpha$. This means, checking entailment of $\alpha$ with respect to $\Omc$, is equivalent to checking unsatisfiability of $\Omc \cup B$. $a$, $a_i$, and $b$ are assumed to not appear in $\Omc$.}
+\begin{table}[ht]
+  \begin{center}
+    \begin{tabular}{l|l}
+      $\alpha$ & $B$ \\
+      \hline
+      $S_1 \circ \cdots \circ S_n \sqsubseteq R$ & $S_1(a_1, a_2)$, $\dots$, $S_n(a_n, a_{n + 1})$, and $\lnot R(a_1, a_{n + 1})$ \\
+      $\disjoint(S, R)$ & $S(a, b)$ and $R(a, b)$ \\
+      $C \sqsubseteq D$ & $(C \sqcap \lnot D)(a)$ \\
+      $C(a)$ & $\lnot C(a)$ \\
+      $R(a, b)$ & $\lnot R(a, b)$ \\
+      $\lnot R(a, b)$ & $R(a, b)$ \\
+      $a = b$ & $a \not= b$ \\
+      $a \not= b$ & $a = b$ \\
+    \end{tabular}
+  \end{center}
+  \label{tab:entailment-reduction}
+  \caption[Axioms substitution for reducing entailment to satisfiability]{The axioms in $B$ together have the “opposite” meaning of those in $\alpha$. This means, checking entailment of $\alpha$ with respect to $\Omc$, is equivalent to checking unsatisfiability of $\Omc \cup B$. $a$, $a_i$, and $b$ are assumed to not appear in $\Omc$.}
 \end{table}
 
 \subsubsection{Concept satisfiability} \label{concept-satisfiability}
