Started writing about the evaluation

--- a/biblio.bib
+++ b/biblio.bib
@@ -63,17 +63,6 @@
   publisher = {Springer}
 }
 
-@misc{bioportal,
-  author   = {Matentzoglu, Nicolas and
-              Parsia, Bijan},
-  title    = {{BioPortal} Snapshot 30.03.2017},
-  optmonth = mar,
-  year     = 2017,
-  doi      = {10.5281/zenodo.439510},
-  url      = {\url{https://doi.org/10.5281/zenodo.439510}},
-  note     = {last accessed, 2017/08/04}
-}
-
 @inproceedings{LLRRS10,
   author    = {Domenico Lembo and
                Maurizio Lenzerini and
@@ -2064,6 +2053,21 @@
   author  = {Protégé developers et al.},
   title   = {Protege 5 Developer Documentation},
   url     = {https://protegewiki.stanford.edu/wiki/Protege5DevDocs},
+  urldate = {2023-06-14}
+}
+
+@misc{bioportal,
+  title   = {BioPortal},
+  year    = 2023,
+  url     = {https://bioportal.bioontology.org/},
+  urldate = {2023-06-14}
+}
+
+@misc{pizzaontology,
+  author  = {Nick Drummond and Alan Rector and Matthew Horridge and Chris Wroe and Robert Stevens},
+  title   = {Pizza Ontology},
+  year    = 2023,
+  url     = {https://protege.stanford.edu/ontologies/pizza/pizza.owl},
   urldate = {2023-06-14}
 }
 
