--- a/sections/b.main/5.evaluation.tex
+++ b/sections/b.main/5.evaluation.tex
@@ -1,5 +1,46 @@
 
-% TODO
+The evaluation of the proposed refinement and axiom weakening operator has been carried out using the implementation described in \cref{prototype} using different ontologies from BioPortal \cite{whetzel2011bioportal,bioportal}. Additionally, the pizza ontology \cite{pizzaontology} was included in the testing. The chosen ontologies are of different sizes and use a varying amount of expressive features. Some characteristics of the used ontologies are shown in \cref{table:ontologies}. On average, they contain about 289 axioms, 73 concept names, 29 role names, and 168 subconcepts.
+
+\begin{table}[ht]
+  \scriptsize
+  \begin{widepage}
+    \centering
+    \begin{tabular}{|lllrrrr|}
+      \hline
+      Abbreviation & Name & Expressivity & Axioms & Concepts & Roles & Subconcepts \\
+      \hline
+      admin & Nurse Administrator & $\mathcal{ALCHOIF}$ & 229 & 42 & 29 & 144 \\
+      ahso & Animal Health Surveillance Ontology & $\mathcal{ALCRIF}$ & 166 & 38 & 31 & 104 \\
+      cdao & Comparative Data Analysis Ontology & $\mathcal{ALCROIQ}$ & 437 & 132 & 68 & 375 \\
+      cdpeo & Chronic Disease Patient Education & $\mathcal{ALCHF}$ & 422 & 41 & 31 & 170 \\
+      covid19-ibo & Covid19 Impact on Banking Ontology & $\mathcal{ALCH}$ & 288 & 160 & 33 & 227 \\
+      ecp & Electronic Care Plan & $\mathcal{ALCRQ}$ & 127 & 33 & 17 & 99 \\
+      emo & Enzyme Mechanism Ontology & $\mathcal{ALCHQ}$ & 368 & 157 & 24 & 255 \\
+      evi & Evidence Graph Ontology & $\mathcal{ALCRI}$ & 143 & 30 & 38 & 69 \\
+      falls & Falls Prevention & $\mathcal{ALCH}$ & 79 & 30 & 20 & 35 \\
+      fo & Fern Ontology & $\mathcal{ALCHI}$ & 59 & 31 & 4 & 46 \\
+      gbm & Glioblastoma & $\mathcal{ALCIF}$ & 603 & 108 & 28 & 227 \\
+      gfvo & Genomic Feature and Variation Ontology & $\mathcal{ALCH}$ & 332 & 102 & 30 & 170 \\
+      koro & Knowledge Object Reference Ontology & $\mathcal{ALCHI}$ & 262 & 110 & 19 & 194 \\
+      lico & Liver Case Ontology & $\mathcal{ALCHQ}$ & 366 & 93 & 36 & 230 \\
+      mamo & Mathematical Modelling Ontology & $\mathcal{ALCR}$ & 229 & 107 & 3 & 154 \\
+      mpio & Minimum PDDI Information Ontology & $\mathcal{ALCH}$ & 38 & 30 & 14 & 45 \\
+      provo & Provenance Ontology & $\mathcal{ALCRIN}$ & 170 & 31 & 42 & 128 \\
+      qudt & Quantities, Units, Dimensions, and Types & $\mathcal{SHOIQ}$ & 293 & 74 & 73 & 177 \\
+      trans & Nurse Transitional & $\mathcal{ALCROIF}$ & 244 & 44 & 22 & 123 \\
+      triage & Nurse triage & $\mathcal{ALCHF}$ & 132 & 33 & 29 & 129 \\
+      vio & Vaccine Investigation Ontology & $\mathcal{ALCRI}$ & 249 & 81 & 44 & 235 \\
+      pizza & Pizza Ontology & $\mathcal{SHOIN}$ & 1131 & 100 & 8 & 376 \\
+      \hline
+    \end{tabular}
+  \end{widepage}
+  \caption{The ontologies used for evaluation. The number of axioms, concept names, role names, and subconcepts are taken after applying preprocessing.}
+  \label{table:ontologies}
+\end{table}
+
+Since the ontologies use OWL 2, the axioms and concepts do not map directly to \SROIQ. It is possible to directly apply axiom weakening to OWL 2 DL ontologies, a description of such a scheme and why it might be useful can be found in \cref{weakening-owl-2-dl}. However, in order to follow the definitions laid out in \cref{weakening-sroiq}, the OWL 2 DL axioms have been mapped to \SROIQ axioms. A detailed description of the mapping between OWL 2 DL and \SROIQ used for this evaluation can be found in \cref{owl-to-sroiq}. While some axioms have a direct mapping, others have been replaced by a set of axioms that together are equivalent. During the preprocessing, we further removed annotation axioms and axioms related to data properties and any axiom that caused any OWL 2 DL profile violation, as our weakening operator does not handle them.
+
+Claims about runtime should generally only be used for relative comparisons and rough estimates. While they will obviously vary greatly based on hardware choices, all evaluations here have been performed on an Intel Coffee Lake system running at around 4GHz for the duration of the experiment. Unless otherwise indicated, the FaCT++ reasoner \cite{tsarkov2006fact++,factpp} was used for evaluation.
 
 \section{Evaluating the Quality of Repairs}
 
