--- a/sections/b.main/3.theory/3.weakening.tex
+++ b/sections/b.main/3.theory/3.weakening.tex
@@ -97,7 +97,7 @@ Revisiting the case in \Cref{exa:up-cover} we observe that $\gamma_{\Omc,\Omc}(C
     \item For $Y = \exists R.C$, given any model $I$ of $\Omcref$, we know for all elements $a \in (\exists R.C)^I$ there exists a $b$ such that $\langle a, b \rangle \in R^I$ and $b \in C^I$. By our inductive hypothesis we know that $C \sqsubseteq_\Omcref C'$ holds for $C' \in \gamma_{\Omcref,\Omcfull}(C)$ and $R \sqsubseteq_\Omcref R'$ for $R' \in \gamma_{\Omcref,\Omcfull}(R)$. It follows that $\langle a, b \rangle \in R'^I$ and $b \in C'^I$. We conclude that $a \in (\exists R'.C)^I$ and $a \in (\exists R.C')^I$. Hence, $\exists R.C \sqsubseteq_\Omcref \exists R'.C$ and $\exists R.C \sqsubseteq_\Omcref \exists R.C'$.
     \item For $Y = \exists R.\self$, given any model $I$ of $\Omcref$, we know for all elements $a \in (\exists R.\self)^I$, $\langle a, a \rangle \in R^I$. By our inductive hypothesis we know that $R \sqsubseteq_\Omcref R'$ for $R' \in \gamma_{\Omcref,\Omcfull}(R)$. It follows that $\langle a, a \rangle \in R'^I$. We conclude that $a \in (\exists R'.\self)^I$ and thus, $\exists R.\self \sqsubseteq_\Omcref \exists R'.C\self$.
     \item For $Y ={} \more n R.C$, given any model $I$ of $\Omcref$, we know for all elements $a \in (\more n R.C)^I$ there exist at least $n$ elements $b_1, \dots, b_n$ such that $\langle a, b_i \rangle \in R^I$ and $b_i \in C^I$ for $i = 1, \dots, n$. Since there are at least $n$ such elements, there are also at least $k \leq n$, meaning $\more n R.C \sqsubseteq_\Omcref \more k R.C$. By our inductive hypothesis we also know that $C \sqsubseteq_\Omcref C'$ holds for $C' \in \gamma_{\Omcref,\Omcfull}(C)$ and $R \sqsubseteq_\Omcref R'$ for $R' \in \gamma_{\Omcref,\Omcfull}(R)$. It follows that $\langle a, b_i \rangle \in R'^I$ and $b_i \in C'^I$ for $i = 1, \dots, n$. We conclude that $a \in (\more n R'.C)^I$ and $a \in (\more n R.C')^I$. Hence, $\more n R.C \sqsubseteq_\Omcref \more n R'.C$ and $\more n R.C \sqsubseteq_\Omcref \more n R.C'$.
-    \item For $Y ={} \less n R.C$, given any model $I$ of $\Omcref$, we know for all elements $a \in (\less n R.C)^I$ there exist at most $n$ elements $b_1, \dots, b_n$ such that $\langle a, b_i \rangle \in R^I$ and $b_i \in C^I$ for $i = 1, \dots, n$. Since there are at most $n$ such elements, there are also at most $k \geq n$, meaning $\less n R.C \sqsubseteq_\Omcref \less k R.C$. By our inductive hypothesis we also know that $C' \sqsubseteq_\Omcref C$ holds for $C' \in \rho_{\Omcref,\Omcfull}(C)$ and $R' \sqsubseteq_\Omcref R$ for $R' \in \rho_{\Omcref,\Omcfull}(R)$. It follows that there exist no other $b \not\in \{ b_1, \dots, b_n \}$ such that $\langle a, b \rangle \in R'^I$ and $b \in C$, or $\langle a, b \rangle \in R^I$ and $b \in C'^I$. We conclude that there are still at most $n$ such elements, hence, $a \in (\less n R'.C)^I$ and $a \in (\less n R.C')^I$. Hence, $\less n R.C \sqsubseteq_\Omcref \less n R'.C$ and $\less n R.C \sqsubseteq_\Omcref \less n R.C'$.
+    \item For $Y ={} \less n R.C$, given any model $I$ of $\Omcref$, we know for all elements $a \in (\less n R.C)^I$ there exist at most $n$ elements $b_1, \dots, b_n$ such that $\langle a, b_i \rangle \in R^I$ and $b_i \in C^I$ for $i = 1, \dots, n$. Since there are at most $n$ such elements, there are also at most $k \geq n$, meaning $\less n R.C \sqsubseteq_\Omcref \less k R.C$. By our inductive hypothesis we also know that $C' \sqsubseteq_\Omcref C$ holds for $C' \in \rho_{\Omcref,\Omcfull}(C)$ and $R' \sqsubseteq_\Omcref R$ for $R' \in \rho_{\Omcref,\Omcfull}(R)$. It follows that there exist no other $b \not\in \{ b_1, \dots, b_n \}$ such that $\langle a, b \rangle \in R'^I$ and $b \in C$, or $\langle a, b \rangle \in R^I$ and $b \in C'^I$. We conclude that there are still at most $n$ such elements, hence, $a \in (\less n R'.C)^I$ and $a \in (\less n R.C')^I$. Therefore, $\less n R.C \sqsubseteq_\Omcref \less n R'.C$ and $\less n R.C \sqsubseteq_\Omcref \less n R.C'$.
   \end{itemize}
 \end{proof}
 
