--- a/sections/b.main/5.evaluation.tex
+++ b/sections/b.main/5.evaluation.tex
@@ -1,5 +1,5 @@
 
-The evaluation of the proposed refinement and axiom weakening operator has been carried out using the implementation described in \cref{prototype} using different ontologies from BioPortal \cite{whetzel2011bioportal,bioportal}. Additionally, the pizza ontology \cite{pizzaontology} was included in the testing. The chosen ontologies are of different sizes and use a varying amount of expressive features. Some characteristics of the used ontologies are shown in \cref{table:ontologies}. On average, they contain about 289 axioms, 73 concept names, 29 role names, and 168 subconcepts.
+The evaluation of the proposed refinement and axiom weakening operator has been carried out using the implementation described in \cref{prototype} using different ontologies from BioPortal \cite{whetzel2011bioportal,bioportal}. Additionally, the pizza ontology \cite{pizzaontology} was included in the testing. The chosen ontologies are of different sizes and use a varying amount of expressive features. Some characteristics of the used ontologies are shown in \cref{table:ontologies}. On average, they contain about 289 axioms, 73 concept names, 29 role names, and 168 subconcepts. Some additional evaluation results, that did not fit into this chapter, can be found in \cref{eval-appendix}.
 
 \begin{table}[ht]
   \scriptsize
@@ -25,12 +25,12 @@ The evaluation of the proposed refinement and axiom weakening operator has been 
       lico & Liver Case Ontology & $\mathcal{ALCHQ}$ & 366 & 93 & 36 & 230 \\
       mamo & Mathematical Modelling Ontology & $\mathcal{ALCR}$ & 229 & 107 & 3 & 154 \\
       mpio & Minimum PDDI Information Ontology & $\mathcal{ALCH}$ & 38 & 30 & 14 & 45 \\
+      pizza & Pizza Ontology & $\mathcal{SHOIN}$ & 1131 & 100 & 8 & 376 \\
       provo & Provenance Ontology & $\mathcal{ALCRIN}$ & 170 & 31 & 42 & 128 \\
       qudt & Quantities, Units, Dimensions, and Types & $\mathcal{SHOIQ}$ & 293 & 74 & 73 & 177 \\
       trans & Nurse Transitional & $\mathcal{ALCROIF}$ & 244 & 44 & 22 & 123 \\
       triage & Nurse triage & $\mathcal{ALCHF}$ & 132 & 33 & 29 & 129 \\
       vio & Vaccine Investigation Ontology & $\mathcal{ALCRI}$ & 249 & 81 & 44 & 235 \\
-      pizza & Pizza Ontology & $\mathcal{SHOIN}$ & 1131 & 100 & 8 & 376 \\
       \hline
     \end{tabular}
   \end{widepage}
